--- a/2212/Jenkinsfile
+++ b/2212/Jenkinsfile
@@ -14,13 +14,19 @@ pipeline {
   
 
     environment {
-        // 전역값을 넣어 두시면 위 parameters 입력이 필요 없어요. (전체 Jenkinfile에서 해당 내용을 모두 수정해 놓으면 좋습니다.)
+        // ===== 사용자별 변경 =====
+        GITHUB_USERNAME   = "2025-01-JAVA-DEVELOPER-159"
         DOCKERHUB_USERNAME = "academyitwill"
-        GITHUB_USERNAME = "2025-01-JAVA-DEVELOPER-159"
+         // ===== 강의 고정값 =====
+         CLASS_NUM = '2212'
 
-        // 아래 부분 수정(x)
-        GITHUB_URL = "https://github.com/${GITHUB_USERNAME}/kubernetes-anotherclass-sprint2.git"
-        CLASS_NUM = '2212'
+         // ===== Git Repositories =====
+        GITHUB_SCRIPT_URL = "https://github.com/${GITHUB_USERNAME}/kubernetes-anotherclass-sprint2.git"
+        GITHUB_SOURCE_URL = "https://github.com/${GITHUB_USERNAME}/kubernetes-anotherclass-api-tester.git"
+      
+
+    
+       
     }
     
     stages {
@@ -38,7 +44,7 @@ pipeline {
         stage('소스파일 체크아웃') {
             steps {
                 // 소스코드를 가져올 Github 주소
-                git branch: 'main', url: 'https://github.com/2025-01-JAVA-DEVELOPER-159/kubernetes-anotherclass-api-tester.git'
+                git branch: 'main', url: '${GITHUB_SOURCE_URL}'
             }
         }
 
@@ -55,7 +61,7 @@ pipeline {
                 checkout scmGit(branches: [[name: '*/main']],
                     extensions: [[$class: 'SparseCheckoutPaths',
                     sparseCheckoutPaths: [[path: "/${CLASS_NUM}"]]]],
-					userRemoteConfigs: [[url: "${GITHUB_URL}"]])
+					userRemoteConfigs: [[url: "${GITHUB_SCRIPT_URL}"]])
             }
         }
 
