--- a/2212/Jenkinsfile
+++ b/2212/Jenkinsfile
@@ -44,7 +44,7 @@ pipeline {
         stage('소스파일 체크아웃') {
             steps {
                 // 소스코드를 가져올 Github 주소
-                git branch: 'main', url: '${GITHUB_SOURCE_URL}'
+                git branch: 'main', url: "${GITHUB_SOURCE_URL}"
             }
         }
 
