--- a/2212/Jenkinsfile
+++ b/2212/Jenkinsfile
@@ -15,8 +15,8 @@ pipeline {
 
     environment {
         // ===== 사용자별 변경 =====
-        GITHUB_USERNAME   = "2025-01-JAVA-DEVELOPER-159"
-        DOCKERHUB_USERNAME = "academyitwill"
+        //GITHUB_USERNAME   = "2025-01-JAVA-DEVELOPER-159"
+        //DOCKERHUB_USERNAME = "academyitwill"
          // ===== 강의 고정값 =====
          CLASS_NUM = '2212'
 
@@ -45,6 +45,26 @@ pipeline {
             steps {
                 // 소스코드를 가져올 Github 주소
                 git branch: 'main', url: "${GITHUB_SOURCE_URL}"
+            }
+        }   stage('소스파일 체크아웃') {   stage('소스파일 체크아웃') {
+            steps {
+                // 소스코드를 가져올 Github 주소
+                git branch: 'main', url: '${GITHUB_SOURCE_URL}'
+            }
+        }   stage('소스파일 체크아웃') {
+            steps {
+                // 소스코드를 가져올 Github 주소
+                git branch: 'main', url: '${GITHUB_SOURCE_URL}'
+            }
+        }   stage('소스파일 체크아웃') {
+            steps {
+                // 소스코드를 가져올 Github 주소
+                git branch: 'main', url: '${GITHUB_SOURCE_URL}'
+            }
+        }
+            steps {
+                // 소스코드를 가져올 Github 주소
+                git branch: 'main', url: '${GITHUB_SOURCE_URL}'
             }
         }
 
