--- a/2213/Jenkinsfile
+++ b/2213/Jenkinsfile
@@ -8,11 +8,15 @@ pipeline {
 
     environment {
         // 전역값을 넣어 두시면 위 parameters 입력이 필요 없어요. (전체 Jenkinfile에서 해당 내용을 모두 수정해 놓으면 좋습니다.)
-        // GITHUB_USERNAME = ""
-
-        // 아래 부분 수정(x)
+        GITHUB_USERNAME   = "2025-01-JAVA-DEVELOPER-159"
+        //DOCKERHUB_USERNAME = "academyitwill"
+        
         GITHUB_URL = "https://github.com/${GITHUB_USERNAME}/kubernetes-anotherclass-sprint2.git"
+        // ===== 강의 고정값 =====
         CLASS_NUM = '2213'
+        // ===== Git Repositories =====
+        GITHUB_SCRIPT_URL = "https://github.com/${GITHUB_USERNAME}/kubernetes-anotherclass-sprint2.git"
+        //GITHUB_SOURCE_URL = "https://github.com/${GITHUB_USERNAME}/kubernetes-anotherclass-api-tester.git"
     }
 
     stages {
